--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0"
+  },
+  "peerDependencies": {
+    "serverless": "1 || 2"
   }
 }
